feat: improve performance and accessibility a bit
- compress images using webp
- add aria-labels and aria-hidden to some elements
- add robots.txt
- update packages

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -14,28 +14,28 @@ import MailIcon from "../assets/icons/socials/mail.svg";
 	<ul class="grid grid-cols-4 [&_a]:flex [&_a]:justify-center [&_a]:size-full [&_a]:py-1">
 		<!-- z-50 for tooltips -->
 		<li class="z-50">
-			<a href="https://github.com/trafficlunar" data-tooltip="GitHub"><GitHubIcon /></a>
+			<a href="https://github.com/trafficlunar" data-tooltip="GitHub" aria-label="GitHub"><GitHubIcon /></a>
 		</li>
 		<li class="z-50">
-			<a href="https://bsky.app/profile/trafficlunar.net" data-tooltip="Bluesky"><BlueskyIcon /></a>
+			<a href="https://bsky.app/profile/trafficlunar.net" data-tooltip="Bluesky" aria-label="Bluesky"><BlueskyIcon /></a>
 		</li>
 		<li class="z-50">
-			<a href="https://www.twitter.com/trafficlunr" data-tooltip="Twitter"><TwitterIcon /></a>
+			<a href="https://www.twitter.com/trafficlunr" data-tooltip="Twitter" aria-label="Twitter"><TwitterIcon /></a>
 		</li>
 		<li class="z-50">
-			<a href="https://discord.gg/48cXBFKvWQ" data-tooltip="Discord"><DiscordIcon /></a>
+			<a href="https://discord.gg/48cXBFKvWQ" data-tooltip="Discord" aria-label="Discord"><DiscordIcon /></a>
 		</li>
 		<li>
-			<a href="https://www.reddit.com/user/trafficlunr" data-tooltip="Reddit"><RedditIcon /></a>
+			<a href="https://www.reddit.com/user/trafficlunr" data-tooltip="Reddit" aria-label="Reddit"><RedditIcon /></a>
 		</li>
 		<li>
-			<a href="https://anilist.co/user/trafficlunar/" data-tooltip="AniList"><AniListIcon /></a>
+			<a href="https://anilist.co/user/trafficlunar" data-tooltip="AniList" aria-label="AniList"><AniListIcon /></a>
 		</li>
 		<li>
-			<a href="https://www.last.fm/user/axolotlmaid" data-tooltip="Last.FM"><LastFMIcon /></a>
+			<a href="https://www.last.fm/user/axolotlmaid" data-tooltip="Last.FM" aria-label="Last.FM"><LastFMIcon /></a>
 		</li>
 		<li>
-			<a href="mailto:hello@trafficlunar.net" data-tooltip="E-mail"><MailIcon /></a>
+			<a href="mailto:hello@trafficlunar.net" data-tooltip="E-mail" aria-label="E-mail"><MailIcon /></a>
 		</li>
 	</ul>
 </section>
