--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,6 +67,7 @@ import ProfilePicture from "../../public/pfp.webp";
 				],
 			})}
 		/>
+		<script defer src="https://analytics.trafficlunar.net/script.js" data-website-id="2d668943-f1ae-418e-a2ba-c164f354c59c"></script>
 	</head>
 	<body class="bg-base text-text flex flex-col items-center px-8">
 		<a href="/" aria-label="trafficlunar logo" transition:persist>
