fix: button code on mobile
also change /status to /activity and also mess up linting (lol)

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -77,10 +77,7 @@ import ProfilePicture from "../../public/pfp.webp";
 		<Lunar aria-hidden class="absolute top-8 right-8 size-12 animate-avoid hover:animate-running not-hover:animate-pause" />
 
 		<div class="max-w-4xl w-full grid grid-cols-5 gap-4 py-8 max-[60rem]:grid-cols-1">
-			<div
-				class="flex flex-col max-[32rem]:flex-row lg:flex-col items-center gap-6 sm:gap-8 lg:gap-8 justify-center md:justify-start"
-				transition:persist
-			>
+			<div class="flex flex-col max-[32rem]:flex-row lg:flex-col items-center gap-6 sm:gap-8 lg:gap-8 justify-center md:justify-start" transition:persist>
 				<a href="/">
 					<Image
 						src={ProfilePicture}
