--- a/src/pages/buttons.astro
+++ b/src/pages/buttons.astro
@@ -5,18 +5,15 @@ import EightyEightyThirtyOne from "../components/88x31.svelte";
 ---
 
 <Layout>
-	<section
-		class="mb-0! transition-all duration-300 delay-100 starting:opacity-0 starting:translate-y-4 text-[0.938rem] [&_img]:w-[88px] [&_img]:h-[31px]"
-	>
+	<section class="mb-0! transition-all duration-300 delay-100 starting:opacity-0 starting:translate-y-4 text-[0.938rem] [&_img]:w-[88px] [&_img]:h-[31px]">
 		<legend>buttons</legend>
 
 		<p class="mb-1">
 			Welcome to my collection of 88x31 buttons, containing cool websites or just random buttons. Get my button below, hotlinking is perfectly fine:
 		</p>
 
-		<div class="flex">
-			<a href="https://trafficlunar.net/" target="_blank" class="shrink-0 mt-2 mr-2 h-min"
-				><img src="/88x31.gif" width="88" height="31" alt="trafficlunar" /></a
+		<div class="flex max-md:flex-col">
+			<a href="https://trafficlunar.net/" target="_blank" class="shrink-0 mt-2 mr-2 h-min"><img src="/88x31.gif" width="88" height="31" alt="trafficlunar" /></a
 			>
 
 			<div class="bg-mantle p-2.5 rounded-lg relative border border-surface0/75 shadow-sm mt-2">
