--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,21 +17,18 @@ import LocationIcon from "../assets/icons/location.svg";
 		</p>
 		<p class="mt-2">I like coding things, maintaining and setting up servers, playing video games, watching anime, and listening to music.</p>
 		<p class="mt-2">
-			This site was made using <a href="https://astro.build/" class="link">Astro</a> + <a href="https://svelte.dev/" class="link">Svelte</a> and is hosted
-			on both <a href="https://pages.cloudflare.com/" class="link" data-tooltip="At trafficlunar.net!">Cloudflare Pages (?)</a> and <a
+			This site was made using Astro + Svelte and is hosted on both
+			<a href="https://pages.cloudflare.com/" class="link" data-tooltip="At trafficlunar.net!">Cloudflare Pages (?)</a> and <a
 				href="https://nekoweb.org/"
 				class="link"
 				data-tooltip="At trafficlunar.nekoweb.org!">Nekoweb (?)</a
 			>.
 		</p>
 		<p class="mt-2">
-			I use <a href="https://archlinux.org/" class="link">Arch</a> BTW and <a href="https://hypr.land/" class="link">Hyprland</a> with <a
-				href="https://github.com/catppuccin/catppuccin?tab=readme-ov-file#-palette"
-				class="link">Catppuccin</a
-			>
-			<span class="text-red">F</span><span class="text-peach">r</span><span class="text-yellow">a</span><span class="text-green">p</span><span
-				class="text-blue">p</span
-			><span class="text-mauve">é</span> color schemes for everything (including this website!)
+			I use Arch BTW and Hyprland with the Catppuccin
+			<span class="text-red">F</span><span class="text-peach">r</span><span class="text-yellow">a</span><span class="text-green">p</span><span class="text-blue"
+				>p</span
+			><span class="text-mauve">é</span> color scheme for everything (including this website!)
 		</p>
 
 		<div class="flex gap-1 mt-4">
@@ -48,9 +45,7 @@ import LocationIcon from "../assets/icons/location.svg";
 
 	<Tools />
 
-	<div
-		class="flex items-center gap-4 text-subtext0 text-sm font-medium my-4 transition-all duration-300 delay-250 starting:opacity-0 starting:translate-y-4"
-	>
+	<div class="flex items-center gap-4 text-subtext0 text-sm font-medium my-4 transition-all duration-300 delay-250 starting:opacity-0 starting:translate-y-4">
 		<hr class="grow border-surface1" />
 		<span>projects</span>
 		<hr class="grow border-surface1" />
